refactor ChannelChoosingDropDownEvent to check for user permission